samples/_failures_safe/1761144385_0421ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7670674.c: In function ‘main’:
./samples/SAFE/__tmp_c7670674.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_c7670674.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7670674.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7670674.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7670674.c:155:17: error: expected declaration or statement at end of input
